--- a/Android Application/app/src/main/res/layout/activity_image_analysis.xml
+++ b/Android Application/app/src/main/res/layout/activity_image_analysis.xml
@@ -135,6 +135,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:foregroundGravity="right"
+                        android:gravity="left"
                         android:layout_marginStart="120dp"
                         android:text="mole/l"
                         android:textColor="#FFFFFF"
@@ -187,6 +189,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_alignParentRight="true"
+                        android:gravity="right"
                         android:layout_marginStart="120dp"
                         android:text="mg/kg"
                         android:textColor="#FFFFFF"
@@ -298,6 +302,8 @@
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+
                         android:layout_gravity="center"
                         android:layout_marginLeft="120dp"
                         android:gravity="center"
