--- a/Android Application/app/src/main/res/layout/activity_home.xml
+++ b/Android Application/app/src/main/res/layout/activity_home.xml
@@ -12,8 +12,6 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/English"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,32 +27,32 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/logo" />
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="110dp"
+                android:layout_marginTop="120dp"
                 android:text="@string/welcome"
+                android:fontFamily="cursive"
                 android:textColor="@color/teal_200"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="230dp"
-                android:layout_marginTop="-50dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="170dp"
+                android:layout_marginTop="180dp"
                 android:layout_marginRight="10dp"
                 app:cardBackgroundColor="#3A3535"
                 app:cardCornerRadius="20dp">
@@ -85,9 +83,9 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="480dp"
+                android:layout_marginTop="460dp"
                 android:layout_marginRight="10dp"
                 app:cardBackgroundColor="#3A3535"
                 app:cardCornerRadius="20dp">
@@ -112,37 +110,51 @@
                         android:layout_marginRight="0dp"
                         android:layout_marginBottom="0dp"
                         android:text="@string/SensorAnalysis" />
+
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
+
+
         </androidx.cardview.widget.CardView>
+
 
     </androidx.core.widget.NestedScrollView>
 
-    <Button
-        android:id="@+id/English"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/English"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Urdu"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.978" />
-
-    <Button
-        android:id="@+id/Urdu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="15dp"
-        android:text="@string/Urdu"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="20dp"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/English"
-        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
-        app:layout_constraintVertical_bias="0.8" />
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="#3A3535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/english"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="@string/English" />
+
+            <Button
+                android:id="@+id/urdu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="@string/Urdu" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
