--- a/Android Application/app/src/main/res/layout/activity_splash.xml
+++ b/Android Application/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/circularRevealRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#3A3535"
     tools:context=".SplashActivity">
 
     <ImageView
