--- a/Android Application/app/src/main/res/values/colors.xml
+++ b/Android Application/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#f4a54a</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#EC0707</color>
 </resources>
