Sensor integration is completed

--- a/Android Application/app/src/main/res/layout/activity_sensor_dashboard.xml
+++ b/Android Application/app/src/main/res/layout/activity_sensor_dashboard.xml
@@ -363,6 +363,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
+                    android:id="@+id/saveId"
                     android:background="@color/purple_500"
                     android:padding="10dp"
                     android:layout_weight="1"
@@ -385,12 +386,13 @@
                 android:layout_marginRight="2dp">
 
                 <Button
-                    android:id="@+id/Save"
+                    android:id="@+id/btnSave"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:text="@string/sav" />
+
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -400,11 +402,20 @@
                 android:layout_marginRight="2dp">
 
                 <Button
+                    android:id="@+id/show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="@string/show" />
+                <Button
                     android:id="@+id/Home"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:text="@string/Home" />
             </TableRow>
         </TableLayout>
