--- a/Android Application/app/src/main/res/layout/activity_splash.xml
+++ b/Android Application/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/white"
+        android:textColor="#A8A0A0"
         android:layout_centerInParent="true"
         android:layout_marginBottom="30dp"
         android:text="All rights are reserved"
