--- a/Android Application/app/src/main/res/layout/activity_sensor_saved_values.xml
+++ b/Android Application/app/src/main/res/layout/activity_sensor_saved_values.xml
@@ -5,27 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#3A3535"
     tools:context=".DisplaySavedSensorValues">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/savedValues"
-        android:fontFamily="cursive"
         android:textColor="@color/purple_500"
         android:textSize="24sp"
         android:textStyle="bold" />
-    <Button
-        android:id="@+id/Home"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:text="@string/Home" />
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+
+            android:layout_gravity="center"
+            android:background="#3A3535"
+            app:srcCompat="@drawable/ic_baseline_search_24" />
+
+        <EditText
+            android:id="@+id/searchID"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
+            android:ems="10"
+            android:hint="@string/search"
+            android:inputType="textPersonName"
+             />
+
+        <Button
+            android:id="@+id/Home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:gravity="center"
+            android:text="@string/Home" />
+
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
