--- a/Android Application/app/src/main/res/layout/saved_sensor_values_layout.xml
+++ b/Android Application/app/src/main/res/layout/saved_sensor_values_layout.xml
@@ -9,7 +9,6 @@
     android:layout_marginEnd="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="5dp"
-    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp">
 
     <androidx.core.widget.NestedScrollView
@@ -19,7 +18,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#0728EF"
+            app:cardBackgroundColor="@color/teal_700"
             app:cardCornerRadius="5dp">
 
 
@@ -41,7 +40,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Sampling time:  "
-                        android:textColor="@color/white" />
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/time"
@@ -55,7 +54,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
                         android:text="May 20, 2022"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -73,6 +72,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_200"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -94,7 +94,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="P"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -112,7 +112,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -124,6 +124,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -145,7 +146,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="pH"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -163,7 +164,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -175,6 +176,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -196,7 +198,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="EC"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -214,7 +216,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -226,6 +228,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -247,7 +250,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="N"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -265,7 +268,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -277,6 +280,8 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
+
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -298,7 +303,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="K"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -316,7 +321,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -328,6 +333,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -349,7 +355,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="H"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -367,7 +373,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -380,6 +386,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="5dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="@color/purple_500"
                         app:cardCornerRadius="10dp">
 
                         <LinearLayout
@@ -401,7 +408,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="T"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold" />
 
@@ -419,7 +426,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:text="0.0"
-                                android:textColor="#0E0C0C"
+                                android:textColor="@color/white"
                                 android:textSize="14dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -440,7 +447,7 @@
                         android:text="Sample Id:  "
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/black" />
                     <TextView
                         android:id="@+id/sampleID"
                         android:layout_width="wrap_content"
@@ -454,7 +461,7 @@
                         android:layout_marginBottom="5dp"
                         android:gravity="center"
                         android:text="112739"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/black" />
 
                 </LinearLayout>
 
