Searching functionality is added

--- a/Android Application/app/src/main/res/layout/activity_sensor_saved_values.xml
+++ b/Android Application/app/src/main/res/layout/activity_sensor_saved_values.xml
@@ -41,8 +41,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center"
+            android:textColor="@color/white"
             android:layout_marginLeft="15dp"
             android:ems="10"
+            android:textColorHint="@color/white"
             android:hint="@string/search"
             android:inputType="textPersonName"
              />
